--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
         h1 {
             color:darkgreen;
         }
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+        p{
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -22,6 +31,8 @@
 
     <p>LOTR is an epic high-fantasy novel
     written by J.R.R. Tolkien. </p>
+
+    <img src="LOTR.jpg" alt
 
     <p>"Even the smalled person can change the course ofthe future" - Galadriel</p>
 </body>
