Updated Movie HTML and Image.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Lord of the Rings</title>
+    <title>Over the Hedge</title>
     <style>
         body {
             font-family: Arial, Helvetica,
@@ -18,8 +18,8 @@
         img {
             display: block;
             margin: 20px auto;
-            max-width: 100%;
-            height: auto;
+            max-width: 50%;
+            height: 50%;
         }
         p{
             line-height: 1.6;
@@ -27,13 +27,27 @@
     </style>
 </head>
 <body>
-    <h1>The Lord of the Rings</h1>
+    <h1>Over the Edge</h1>
 
-    <p>LOTR is an epic high-fantasy novel
-    written by J.R.R. Tolkien. </p>
+    <p>Over the Hedge is a 3D animated made in 2006 where RJ, the main character, meets Verne and his crew of critters while trying to collect an assortment of food and drink for an unknown reason.
+    </p>
 
-    <img src="LOTR.jpg" alt
+    <img src="OTH.jpg" alt="Over the Hedge Movie Cover">
 
-    <p>"Even the smalled person can change the course ofthe future" - Galadriel</p>
+    <h2>Some of the Characters</h2>
+    <ul>
+        <li>RJ</li>
+        <li>Verne</li>
+        <li>Hammy</li>
+        <li>Heather</li>
+        <li>Stella</li>
+        <li>Ozzie</li>
+        <li>Penny</li>
+        <li>Lou</li>
+        <li>Gladys Sharp</li>
+    </ul>
+
+    <h2>Wikipedia Link</h2>
+    <a href="https://en.wikipedia.org/wiki/Over_the_Hedge">Over the Hedge Wikipedia</a>
 </body>
 </html>
